# jouet-paiement

./: Cargo.toml  README.md
src/: account.rs  lib.rs  main.rs  model.rs  transaction_processor.rs  transaction_stream_processor.rs
src/account/: account_transaction_processor.rs  account_transactor.rs  processor.rs  transactors.rs
src/account/processor/: depositor.rs  withdrawer.rs
src/account/processor/disputer/: credit_debit_disputer.rs
src/account/transactors/: backcharger.rs  depositor.rs  disputer.rs  resolver.rs  withdrawer.rs
src/account/transactors/backcharger/: credit_backcharger.rs  credit_debit_backcharger.rs
src/account/transactors/disputer/: credit_debit_disputer.rs  credit_disputer.rs
src/account/transactors/resolver/: credit_debit_resolver.rs  credit_resolver.rs
src/model/: account_summary.rs  amount.rs
src/transaction_processor/: simple_transaction_processor.rs
src/transaction_stream_processor/: async_csv_stream_processor.rs  csv_stream_processor.rs  error_handler.rs  transaction_record_converter.rs
tests/: e2e.rs  small_input.txt  small_input_with_transaction_process_error.txt
