[package]
name = "jouet-paiement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
dashmap = "5.5.3"
mockall_double = "0.3.1"
ordered-float = "4.2.0"
serde = { version = "1.0.200", features = ["derive"] }
thiserror = "1.0.59"

[dev-dependencies]
assert_matches = "1.5.0"
mockall = "0.12.1"
rstest = "0.19.0"
rstest_reuse = "0.6.0"